data processing and repo structure

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -5,147 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download and Import Data (48.1s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/tunguz/big-five-personality-test?dataset_version_number=1...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 159M/159M [00:43<00:00, 3.86MB/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/juliann/.cache/kagglehub/datasets/tunguz/big-five-personality-test/versions/1\n",
-      "Dataset path: /Users/juliann/.cache/kagglehub/datasets/tunguz/big-five-personality-test/versions/1\n",
-      "Files in the dataset: ['IPIP-FFM-data-8Nov2018']\n",
-      "Moved IPIP-FFM-data-8Nov2018 to Data/\n",
-      "Dataset moved to: Data/\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import shutil\n",
-    "import kagglehub\n",
-    "\n",
-    "# Download dataset from kagglehub\n",
-    "path = kagglehub.dataset_download(\"tunguz/big-five-personality-test\")\n",
-    "print(path)\n",
-    "print(\"Dataset path:\", path)\n",
-    "\n",
-    "# Specify target directory for data\n",
-    "target_folder = 'Data/'\n",
-    "os.makedirs(target_folder, exist_ok=True)\n",
-    "\n",
-    "# Check the contents of the dataset path\n",
-    "print(\"Files in the dataset:\", os.listdir(path))\n",
-    "\n",
-    "for file_name in os.listdir(path):\n",
-    "    source = os.path.join(path, file_name)\n",
-    "    destination = os.path.join(target_folder, file_name)\n",
-    "    \n",
-    "    # Check if the file exists\n",
-    "    if os.path.exists(source):\n",
-    "        shutil.move(source, destination)\n",
-    "        print(f\"Moved {file_name} to {target_folder}\")\n",
-    "    else:\n",
-    "        print(f\"File does not exist: {source}\")\n",
-    "\n",
-    "print(\"Dataset moved to:\", target_folder)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/juliann/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import kagglehub\n",
-    "import shutil\n",
-    "import os"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Clean into desired format (47.5s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(\"Data/IPIP-FFM-data-8Nov2018/data-final.csv\")\n",
-    "rows = []\n",
-    "cols = data.columns[0].split('\\t')\n",
-    "for index in range(len(data)):\n",
-    "    value = data.iloc[index, 0]\n",
-    "    row = (value.split('\\t'))\n",
-    "    rows.append(row)\n",
-    "processed_data = pd.DataFrame(rows, columns=cols)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Filter for only 1 user per entry (more accurate data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filter the data where 'ipc' column is equal to 1\n",
-    "processed_data = processed_data[processed_data['IPC'] == '1']"
+    "# EDA Notebook\n",
+    "In this notebook we conduct exploratory data analysis to our dataset to better understand the nature of our data and insights for machine learning efforts."
    ]
   },
   {
@@ -158,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,18 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "questions = processed_data.columns[:50].tolist()\n",
-    "answers = processed_data[questions]\n",
-    "df_converted = answers.apply(pd.to_numeric, errors='coerce')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +419,7 @@
        "[696845 rows x 50 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,8 +429,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation Heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.11 | packaged by conda-forge | (main, Dec  5 2024, 14:24:23) [Clang 18.1.8 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
