saved data locally

--- a/notebooks/data_processing_nb.ipynb
+++ b/notebooks/data_processing_nb.ipynb
@@ -56,9 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/juliann/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -77,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"data/IPIP-FFM-data-8Nov2018/data-final.csv\")\n",
+    "data = pd.read_csv(\"../data/IPIP-FFM-data-8Nov2018/data-final.csv\")\n",
     "rows = []\n",
     "cols = data.columns[0].split('\\t')\n",
     "for index in range(len(data)):\n",
@@ -89,6 +98,23 @@
     "    row = (value.split('\\t'))\n",
     "    rows.append(row)\n",
     "data = pd.DataFrame(rows, columns=cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "696845\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(data))"
    ]
   },
   {
@@ -101,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,17 +189,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Provided scoring rubic is applied to dataset, using matrix multiplcation to calcualte trait scorse for teach test taker as weighted sums."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Calculating scores for traits: 100%|██████████| 5/5 [00:01<00:00,  3.77it/s]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -206,11 +233,11 @@
        "      <th>EXT9</th>\n",
        "      <th>EXT10</th>\n",
        "      <th>...</th>\n",
-       "      <th>O score</th>\n",
-       "      <th>C score</th>\n",
-       "      <th>E score</th>\n",
-       "      <th>A score</th>\n",
-       "      <th>N score</th>\n",
+       "      <th>endelapse</th>\n",
+       "      <th>IPC</th>\n",
+       "      <th>country</th>\n",
+       "      <th>lat_appx_lots_of_err</th>\n",
+       "      <th>long_appx_lots_of_err</th>\n",
        "      <th>O score</th>\n",
        "      <th>C score</th>\n",
        "      <th>E score</th>\n",
@@ -232,11 +259,11 @@
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>-12.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>51.5448</td>\n",
+       "      <td>0.1991</td>\n",
        "      <td>27.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>16.0</td>\n",
@@ -256,11 +283,11 @@
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>-13.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MY</td>\n",
+       "      <td>3.1698</td>\n",
+       "      <td>101.7060</td>\n",
        "      <td>17.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>-10.0</td>\n",
@@ -280,11 +307,11 @@
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>-14.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>54.9119</td>\n",
+       "      <td>-1.3833</td>\n",
        "      <td>23.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>-5.0</td>\n",
@@ -304,11 +331,11 @@
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>-17.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>51.7500</td>\n",
+       "      <td>-1.2500</td>\n",
        "      <td>21.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>-4.0</td>\n",
@@ -328,11 +355,11 @@
        "      <td>3.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>-10.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>59.3333</td>\n",
+       "      <td>18.0500</td>\n",
        "      <td>26.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>2.0</td>\n",
@@ -376,11 +403,11 @@
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>-16.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>52.4189</td>\n",
+       "      <td>-1.5054</td>\n",
        "      <td>18.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>8.0</td>\n",
@@ -400,11 +427,11 @@
        "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>-34.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>41.0186</td>\n",
+       "      <td>28.9647</td>\n",
        "      <td>22.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>15.0</td>\n",
@@ -424,11 +451,11 @@
        "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>-32.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38.0000</td>\n",
+       "      <td>-97.0000</td>\n",
        "      <td>27.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
@@ -448,11 +475,11 @@
        "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>-8.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>-23.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>US</td>\n",
+       "      <td>34.1067</td>\n",
+       "      <td>-117.8067</td>\n",
        "      <td>23.0</td>\n",
        "      <td>14.0</td>\n",
        "      <td>-8.0</td>\n",
@@ -472,11 +499,11 @@
        "      <td>4.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>-17.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38.0000</td>\n",
+       "      <td>-97.0000</td>\n",
        "      <td>29.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>9.0</td>\n",
@@ -485,7 +512,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>696845 rows × 120 columns</p>\n",
+       "<p>696845 rows × 115 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -502,36 +529,36 @@
        "1015339   2.0   4.0   3.0   4.0   2.0   2.0   1.0   4.0   2.0    4.0  ...   \n",
        "1015340   4.0   2.0   4.0   2.0   4.0   1.0   4.0   2.0   4.0    4.0  ...   \n",
        "\n",
-       "         O score  C score  E score  A score  N score  O score  C score  \\\n",
-       "0           27.0      8.0     16.0     15.0    -12.0     27.0      8.0   \n",
-       "1           17.0     13.0    -10.0     20.0    -13.0     17.0     13.0   \n",
-       "2           23.0     10.0     -5.0     18.0    -14.0     23.0     10.0   \n",
-       "3           21.0      1.0     -4.0     14.0    -17.0     21.0      1.0   \n",
-       "5           26.0     13.0      2.0     14.0    -10.0     26.0     13.0   \n",
-       "...          ...      ...      ...      ...      ...      ...      ...   \n",
-       "1015334     18.0     10.0      8.0     16.0    -16.0     18.0     10.0   \n",
-       "1015335     22.0      3.0     15.0     15.0    -34.0     22.0      3.0   \n",
-       "1015337     27.0      4.0      2.0     15.0    -32.0     27.0      4.0   \n",
-       "1015339     23.0     14.0     -8.0     13.0    -23.0     23.0     14.0   \n",
-       "1015340     29.0      4.0      9.0     18.0    -17.0     29.0      4.0   \n",
+       "         endelapse  IPC  country  lat_appx_lots_of_err  long_appx_lots_of_err  \\\n",
+       "0                6    1       GB               51.5448                 0.1991   \n",
+       "1               11    1       MY                3.1698               101.7060   \n",
+       "2                7    1       GB               54.9119                -1.3833   \n",
+       "3                7    1       GB               51.7500                -1.2500   \n",
+       "5                3    1       SE               59.3333                18.0500   \n",
+       "...            ...  ...      ...                   ...                    ...   \n",
+       "1015334         16    1       GB               52.4189                -1.5054   \n",
+       "1015335          9    1       TR               41.0186                28.9647   \n",
+       "1015337          7    1       US               38.0000               -97.0000   \n",
+       "1015339          8    1       US               34.1067              -117.8067   \n",
+       "1015340          9    1       US               38.0000               -97.0000   \n",
        "\n",
-       "         E score  A score  N score  \n",
-       "0           16.0     15.0    -12.0  \n",
-       "1          -10.0     20.0    -13.0  \n",
-       "2           -5.0     18.0    -14.0  \n",
-       "3           -4.0     14.0    -17.0  \n",
-       "5            2.0     14.0    -10.0  \n",
-       "...          ...      ...      ...  \n",
-       "1015334      8.0     16.0    -16.0  \n",
-       "1015335     15.0     15.0    -34.0  \n",
-       "1015337      2.0     15.0    -32.0  \n",
-       "1015339     -8.0     13.0    -23.0  \n",
-       "1015340      9.0     18.0    -17.0  \n",
+       "         O score  C score  E score  A score  N score  \n",
+       "0           27.0      8.0     16.0     15.0    -12.0  \n",
+       "1           17.0     13.0    -10.0     20.0    -13.0  \n",
+       "2           23.0     10.0     -5.0     18.0    -14.0  \n",
+       "3           21.0      1.0     -4.0     14.0    -17.0  \n",
+       "5           26.0     13.0      2.0     14.0    -10.0  \n",
+       "...          ...      ...      ...      ...      ...  \n",
+       "1015334     18.0     10.0      8.0     16.0    -16.0  \n",
+       "1015335     22.0      3.0     15.0     15.0    -34.0  \n",
+       "1015337     27.0      4.0      2.0     15.0    -32.0  \n",
+       "1015339     23.0     14.0     -8.0     13.0    -23.0  \n",
+       "1015340     29.0      4.0      9.0     18.0    -17.0  \n",
        "\n",
-       "[696845 rows x 120 columns]"
+       "[696845 rows x 115 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +569,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "# Load the scoring sheet\n",
-    "scoring = pd.read_excel('scoring/scoring.xlsx')\n",
+    "scoring = pd.read_excel('../scoring/scoring.xlsx')\n",
     "\n",
     "# Pivot the scoring table for fast lookups (wide format: ids as index, traits as columns)\n",
     "scoring_pivot = scoring.pivot(index='id', columns='value', values='direction').fillna(0)\n",
@@ -564,9 +591,33 @@
     "        data[col] = tqdm(pd.Series(np.dot(scoring_subset.to_numpy(), \n",
     "                                                  scoring_pivot[trait].to_numpy()), \n",
     "                                           index=data.index), \n",
-    "                                 desc=tqdm_desc, leave=False)\n",
-    "data\n"
+    "                                 desc=tqdm_desc, leave=False)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save full dataset and trait scores to local CSV files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('../data/cleaned_data_v2.csv')\n",
+    "#data.iloc[:, -5:].to_csv(\"../data/trait_scores.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -585,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11 | packaged by conda-forge | (main, Dec  5 2024, 14:24:23) [Clang 18.1.8 ]"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4,
   "vscode": {
