EDA and readme update

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -599,12 +599,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Remove row's containing NaNs in survey answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survey_answer_cols = data.iloc[:, :50]\n",
+    "top_nan_cols = survey_answer_cols.isna().sum().sort_values(ascending=False).head(10)\n",
+    "\n",
+    "data_cleaned = data.loc[survey_answer_cols.dropna().index]\n",
+    "data = data_cleaned"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Save full dataset and trait scores to local CSV files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
