--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1559,6 +1559,173 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Country Correlations with Survey Answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j0/pcv3hzwx5c9gkg_tcgv01mm40000gn/T/ipykernel_75269/4092645097.py:14: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² between 'country' and 'AGR1': 0.0142\n",
+      "R² between 'country' and 'OPN1': 0.0039\n",
+      "R² between 'country' and 'OPN8': 0.0036\n",
+      "R² between 'country' and 'EST5': 0.0036\n",
+      "R² between 'country' and 'AGR8': 0.0026\n",
+      "R² between 'country' and 'OPN9': 0.0024\n",
+      "R² between 'country' and 'EXT6': 0.0023\n",
+      "R² between 'country' and 'AGR7': 0.0021\n",
+      "R² between 'country' and 'OPN2': 0.0018\n",
+      "R² between 'country' and 'CSN5': 0.0017\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Assuming `data` is the DataFrame containing the survey data\n",
+    "# Assuming `survey_answer_cols` is a list of column names for the survey answers\n",
+    "\n",
+    "# Remove rows where 'country' is 'US'\n",
+    "data_cleaned = data[data['country'] != 'US']\n",
+    "\n",
+    "# Initialize a LabelEncoder to convert 'country' to numeric values\n",
+    "label_encoder = LabelEncoder()\n",
+    "data_cleaned['country_encoded'] = label_encoder.fit_transform(data_cleaned['country'])\n",
+    "\n",
+    "# Initialize an empty dictionary to store R² results\n",
+    "r2_results = {}\n",
+    "\n",
+    "# Compute R² for each column in survey_answer_cols\n",
+    "for col in survey_answer_cols:\n",
+    "    if col in data_cleaned.columns:\n",
+    "        X = data_cleaned[[col]].values  # Predictor variable\n",
+    "        y = data_cleaned['country_encoded'].values  # Target variable (encoded country)\n",
+    "        \n",
+    "        # Linear Regression model\n",
+    "        model = LinearRegression().fit(X, y)\n",
+    "        y_pred = model.predict(X)\n",
+    "        \n",
+    "        # Calculate R² score\n",
+    "        r2_results[col] = r2_score(y, y_pred)\n",
+    "\n",
+    "# Sort R² results in descending order and show top 10\n",
+    "sorted_r2_results = sorted(r2_results.items(), key=lambda item: item[1], reverse=True)[:10]\n",
+    "\n",
+    "# Print the top 10 R² values\n",
+    "for col, r2 in sorted_r2_results:\n",
+    "    print(f\"R² between 'country' and '{col}': {r2:.4f}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Country Correlations with Survey Time Spent Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j0/pcv3hzwx5c9gkg_tcgv01mm40000gn/T/ipykernel_75269/1158540280.py:14: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² between 'country' and 'AGR10_E': 0.0000\n",
+      "R² between 'country' and 'EST10_E': 0.0000\n",
+      "R² between 'country' and 'OPN1_E': 0.0000\n",
+      "R² between 'country' and 'OPN8_E': 0.0000\n",
+      "R² between 'country' and 'EXT7_E': 0.0000\n",
+      "R² between 'country' and 'EXT10_E': 0.0000\n",
+      "R² between 'country' and 'OPN6_E': 0.0000\n",
+      "R² between 'country' and 'CSN4_E': 0.0000\n",
+      "R² between 'country' and 'OPN10_E': 0.0000\n",
+      "R² between 'country' and 'AGR8_E': 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "time_cols = [col + '_E' for col in survey_answer_cols]\n",
+    "\n",
+    "\n",
+    "# Remove rows where 'country' is 'US'\n",
+    "data_cleaned = data[data['country'] != 'US']\n",
+    "\n",
+    "# Initialize a LabelEncoder to convert 'country' to numeric values\n",
+    "label_encoder = LabelEncoder()\n",
+    "data_cleaned['country_encoded'] = label_encoder.fit_transform(data_cleaned['country'])\n",
+    "\n",
+    "# Initialize an empty dictionary to store R² results\n",
+    "r2_results = {}\n",
+    "\n",
+    "for col in time_cols:\n",
+    "    if col in data_cleaned.columns:\n",
+    "        X = data_cleaned[[col]].values  # Predictor variable\n",
+    "        y = data_cleaned['country_encoded'].values  # Target variable (encoded country)\n",
+    "        \n",
+    "        # Linear Regression model\n",
+    "        model = LinearRegression().fit(X, y)\n",
+    "        y_pred = model.predict(X)\n",
+    "        \n",
+    "        # Calculate R² score\n",
+    "        r2_results[col] = r2_score(y, y_pred)\n",
+    "\n",
+    "# Sort R² results in descending order and show top 10\n",
+    "sorted_r2_results = sorted(r2_results.items(), key=lambda item: item[1], reverse=True)[:10]\n",
+    "\n",
+    "# Print the top 10 R² values\n",
+    "for col, r2 in sorted_r2_results:\n",
+    "    print(f\"R² between 'country' and '{col}': {r2:.4f}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
