--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -657,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.11 | packaged by conda-forge | (main, Dec  5 2024, 14:24:23) [Clang 18.1.8 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
