--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -250,6 +250,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Clustering Methods:  67%|██████▋   | 2/3 [1:08:36<28:16, 1696.91s/method]  "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "from sklearn.cluster import DBSCAN, AgglomerativeClustering, MeanShift\n",
+    "from sklearn.metrics import davies_bouldin_score, calinski_harabasz_score\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Subset the data (let's say we use 10% of the original data for faster testing)\n",
+    "subset_size = int(0.1 * len(score_data))  # 10% of the data\n",
+    "subset_data = score_data[np.random.choice(score_data.shape[0], subset_size, replace=False)]\n",
+    "\n",
+    "# Define the clustering algorithms and their number of clusters\n",
+    "clustering_methods = {\n",
+    "    \"Agglomerative Clustering\": AgglomerativeClustering(n_clusters=6, linkage=\"single\"),\n",
+    "    \"Gaussian Mixture Model (GMM)\": GaussianMixture(n_components=6, random_state=42),\n",
+    "    \"DBSCAN\": DBSCAN(eps=1.5, min_samples=10),\n",
+    "   \n",
+    "    #\"Mean Shift\": MeanShift()\n",
+    "}\n",
+    "\n",
+    "# Initialize dictionaries to store the scores\n",
+    "db_scores = {}\n",
+    "ch_scores = {}\n",
+    "\n",
+    "# Function to calculate scores for each model\n",
+    "def calculate_scores(method_name, model, data):\n",
+    "    if method_name == \"DBSCAN\":  # DBSCAN doesn't require a fixed number of clusters\n",
+    "        clusters = model.fit_predict(data)\n",
+    "    else:\n",
+    "        clusters = model.fit_predict(data)\n",
+    "\n",
+    "    # Calculate DB and CH scores\n",
+    "    db_score = davies_bouldin_score(data, clusters)\n",
+    "    ch_score = calinski_harabasz_score(data, clusters)\n",
+    "\n",
+    "    return (method_name, db_score, ch_score)\n",
+    "\n",
+    "# Run the clustering methods sequentially and track progress with tqdm\n",
+    "for method_name, model in tqdm(clustering_methods.items(), desc=\"Clustering Methods\", unit=\"method\"):\n",
+    "    method_name, db_score, ch_score = calculate_scores(method_name, model, score_data)\n",
+    "    \n",
+    "    # Store the results in the dictionaries\n",
+    "    db_scores[method_name] = db_score\n",
+    "    ch_scores[method_name] = ch_score\n",
+    "\n",
+    "# Print the DB and CH scores for each method\n",
+    "print(\"Davies-Bouldin Scores:\")\n",
+    "for method, score in db_scores.items():\n",
+    "    print(f\"{method}: {score:.4f}\")\n",
+    "\n",
+    "print(\"\\nCalinski-Harabasz Scores:\")\n",
+    "for method, score in ch_scores.items():\n",
+    "    print(f\"{method}: {score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
