--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,6 +330,227 @@
     "print(\"\\nCalinski-Harabasz Scores:\")\n",
     "for method, score in ch_scores.items():\n",
     "    print(f\"{method}: {score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.cluster import MiniBatchKMeans\n",
+    "\n",
+    "# Fit KMeans with 6 and 7 clusters\n",
+    "kmeans_6 = MiniBatchKMeans(n_clusters=6, random_state=42, batch_size=1000)\n",
+    "kmeans_7 = MiniBatchKMeans(n_clusters=7, random_state=42, batch_size=1000)\n",
+    "\n",
+    "# Assign clusters\n",
+    "clusters_6 = kmeans_6.fit_predict(score_data)\n",
+    "clusters_7 = kmeans_7.fit_predict(score_data)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "manual 10% silhouette score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import pairwise_distances\n",
+    "from sklearn.utils import resample\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def manual_silhouette_score(X, labels):\n",
+    "    \"\"\"\n",
+    "    Compute the silhouette score manually with tqdm progress tracking.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        X (array-like): Data points (subset of original data).\n",
+    "        labels (array-like): Cluster labels for the subset.\n",
+    "        \n",
+    "    Returns:\n",
+    "        float: Average silhouette score.\n",
+    "    \"\"\"\n",
+    "    n_samples = X.shape[0]\n",
+    "    distance_matrix = pairwise_distances(X)  # Precompute all pairwise distances\n",
+    "    unique_labels = np.unique(labels)\n",
+    "    \n",
+    "    silhouette_scores = []\n",
+    "    \n",
+    "    for i in tqdm(range(n_samples), desc=\"Computing silhouette scores\"):\n",
+    "        # Get distances for the current sample\n",
+    "        same_cluster = labels == labels[i]\n",
+    "        other_clusters = ~same_cluster\n",
+    "        \n",
+    "        # a: Mean intra-cluster distance\n",
+    "        a = np.mean(distance_matrix[i, same_cluster]) if np.sum(same_cluster) > 1 else 0\n",
+    "        \n",
+    "        # b: Mean nearest-cluster distance\n",
+    "        b = np.min([\n",
+    "            np.mean(distance_matrix[i, labels == other]) for other in unique_labels if other != labels[i]\n",
+    "        ])\n",
+    "        \n",
+    "        # Silhouette score for sample i\n",
+    "        silhouette_scores.append((b - a) / max(a, b))\n",
+    "    \n",
+    "    return np.mean(silhouette_scores)\n",
+    "\n",
+    "# Sample 10% of the data\n",
+    "subset_size = int(0.1 * len(score_data))  # 10% of data\n",
+    "score_data_sample, clusters_6_sample = resample(score_data, clusters_6, n_samples=subset_size, random_state=42)\n",
+    "#_, clusters_7_sample = resample(score_data, clusters_7, n_samples=subset_size, random_state=42)\n",
+    "\n",
+    "# Compute silhouette scores with tqdm\n",
+    "silhouette_6_sample = manual_silhouette_score(score_data_sample, clusters_6_sample)\n",
+    "#silhouette_7_sample = manual_silhouette_score(score_data_sample, clusters_7_sample)\n",
+    "\n",
+    "print(f\"Silhouette Score for 6 clusters (10% sample): {silhouette_6_sample}\")\n",
+    "#print(f\"Silhouette Score for 7 clusters (10% sample): {silhouette_7_sample}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "package 10% silhouette score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 11\u001b[0m\n\u001b[1;32m      7\u001b[0m score_data_sample, clusters_6_sample \u001b[39m=\u001b[39m resample(score_data, clusters_6, n_samples\u001b[39m=\u001b[39msubset_size, random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[39m#_, clusters_7_sample = resample(score_data, clusters_7, n_samples=subset_size, random_state=42)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \n\u001b[1;32m     10\u001b[0m \u001b[39m# Compute silhouette scores on the subset\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m silhouette_6_sample \u001b[39m=\u001b[39m silhouette_score(score_data_sample, clusters_6_sample)\n\u001b[1;32m     12\u001b[0m \u001b[39m#silhouette_7_sample = silhouette_score(score_data_sample, clusters_7_sample)\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSilhouette Score for 6 clusters (10% sample): \u001b[39m\u001b[39m{\u001b[39;00msilhouette_6_sample\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/sklearn/utils/_param_validation.py:216\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    210\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    211\u001b[0m     \u001b[39mwith\u001b[39;00m config_context(\n\u001b[1;32m    212\u001b[0m         skip_parameter_validation\u001b[39m=\u001b[39m(\n\u001b[1;32m    213\u001b[0m             prefer_skip_nested_validation \u001b[39mor\u001b[39;00m global_skip_validation\n\u001b[1;32m    214\u001b[0m         )\n\u001b[1;32m    215\u001b[0m     ):\n\u001b[0;32m--> 216\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    217\u001b[0m \u001b[39mexcept\u001b[39;00m InvalidParameterError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    218\u001b[0m     \u001b[39m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[1;32m    219\u001b[0m     \u001b[39m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[1;32m    220\u001b[0m     \u001b[39m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[1;32m    221\u001b[0m     \u001b[39m# message to avoid confusion.\u001b[39;00m\n\u001b[1;32m    222\u001b[0m     msg \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\n\u001b[1;32m    223\u001b[0m         \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m\\\u001b[39m\u001b[39mw+ must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    224\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    225\u001b[0m         \u001b[39mstr\u001b[39m(e),\n\u001b[1;32m    226\u001b[0m     )\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/sklearn/metrics/cluster/_unsupervised.py:139\u001b[0m, in \u001b[0;36msilhouette_score\u001b[0;34m(X, labels, metric, sample_size, random_state, **kwds)\u001b[0m\n\u001b[1;32m    137\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    138\u001b[0m         X, labels \u001b[39m=\u001b[39m X[indices], labels[indices]\n\u001b[0;32m--> 139\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mmean(silhouette_samples(X, labels, metric\u001b[39m=\u001b[39;49mmetric, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds))\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/sklearn/utils/_param_validation.py:189\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    187\u001b[0m global_skip_validation \u001b[39m=\u001b[39m get_config()[\u001b[39m\"\u001b[39m\u001b[39mskip_parameter_validation\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m    188\u001b[0m \u001b[39mif\u001b[39;00m global_skip_validation:\n\u001b[0;32m--> 189\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    191\u001b[0m func_sig \u001b[39m=\u001b[39m signature(func)\n\u001b[1;32m    193\u001b[0m \u001b[39m# Map *args/**kwargs to the function signature\u001b[39;00m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/sklearn/metrics/cluster/_unsupervised.py:303\u001b[0m, in \u001b[0;36msilhouette_samples\u001b[0;34m(X, labels, metric, **kwds)\u001b[0m\n\u001b[1;32m    299\u001b[0m kwds[\u001b[39m\"\u001b[39m\u001b[39mmetric\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m metric\n\u001b[1;32m    300\u001b[0m reduce_func \u001b[39m=\u001b[39m functools\u001b[39m.\u001b[39mpartial(\n\u001b[1;32m    301\u001b[0m     _silhouette_reduce, labels\u001b[39m=\u001b[39mlabels, label_freqs\u001b[39m=\u001b[39mlabel_freqs\n\u001b[1;32m    302\u001b[0m )\n\u001b[0;32m--> 303\u001b[0m results \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39;49m(\u001b[39m*\u001b[39;49mpairwise_distances_chunked(X, reduce_func\u001b[39m=\u001b[39;49mreduce_func, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds))\n\u001b[1;32m    304\u001b[0m intra_clust_dists, inter_clust_dists \u001b[39m=\u001b[39m results\n\u001b[1;32m    305\u001b[0m intra_clust_dists \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate(intra_clust_dists)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/sklearn/metrics/pairwise.py:2261\u001b[0m, in \u001b[0;36mpairwise_distances_chunked\u001b[0;34m(X, Y, reduce_func, metric, n_jobs, working_memory, **kwds)\u001b[0m\n\u001b[1;32m   2259\u001b[0m \u001b[39mif\u001b[39;00m reduce_func \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   2260\u001b[0m     chunk_size \u001b[39m=\u001b[39m D_chunk\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m-> 2261\u001b[0m     D_chunk \u001b[39m=\u001b[39m reduce_func(D_chunk, sl\u001b[39m.\u001b[39;49mstart)\n\u001b[1;32m   2262\u001b[0m     _check_chunk_size(D_chunk, chunk_size)\n\u001b[1;32m   2263\u001b[0m \u001b[39myield\u001b[39;00m D_chunk\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/project_env/lib/python3.11/site-packages/sklearn/metrics/cluster/_unsupervised.py:180\u001b[0m, in \u001b[0;36m_silhouette_reduce\u001b[0;34m(D_chunk, start, labels, label_freqs)\u001b[0m\n\u001b[1;32m    178\u001b[0m         sample_weights \u001b[39m=\u001b[39m D_chunk[i]\n\u001b[1;32m    179\u001b[0m         sample_labels \u001b[39m=\u001b[39m labels\n\u001b[0;32m--> 180\u001b[0m         cluster_distances[i] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mbincount(\n\u001b[1;32m    181\u001b[0m             sample_labels, weights\u001b[39m=\u001b[39;49msample_weights, minlength\u001b[39m=\u001b[39;49m\u001b[39mlen\u001b[39;49m(label_freqs)\n\u001b[1;32m    182\u001b[0m         )\n\u001b[1;32m    184\u001b[0m \u001b[39m# intra_index selects intra-cluster distances within cluster_distances\u001b[39;00m\n\u001b[1;32m    185\u001b[0m end \u001b[39m=\u001b[39m start \u001b[39m+\u001b[39m n_chunk_samples\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.utils import resample\n",
+    "\n",
+    "# Sample 10% of the data\n",
+    "subset_size = int(0.1 * len(score_data))  # 10% of data\n",
+    "score_data_sample, clusters_6_sample = resample(score_data, clusters_6, n_samples=subset_size, random_state=42)\n",
+    "#_, clusters_7_sample = resample(score_data, clusters_7, n_samples=subset_size, random_state=42)\n",
+    "\n",
+    "# Compute silhouette scores on the subset\n",
+    "silhouette_6_sample = silhouette_score(score_data_sample, clusters_6_sample)\n",
+    "#silhouette_7_sample = silhouette_score(score_data_sample, clusters_7_sample)\n",
+    "\n",
+    "print(f\"Silhouette Score for 6 clusters (10% sample): {silhouette_6_sample}\")\n",
+    "#print(f\"Silhouette Score for 7 clusters (10% sample): {silhouette_7_sample}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import pairwise_distances\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def manual_silhouette_score(X, labels):\n",
+    "    \"\"\"\n",
+    "    Compute the silhouette score manually with tqdm progress tracking.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        X (array-like): Data points.\n",
+    "        labels (array-like): Cluster labels.\n",
+    "        \n",
+    "    Returns:\n",
+    "        float: Average silhouette score.\n",
+    "    \"\"\"\n",
+    "    n_samples = X.shape[0]\n",
+    "    distance_matrix = pairwise_distances(X)  # Precompute all pairwise distances\n",
+    "    unique_labels = np.unique(labels)\n",
+    "    \n",
+    "    silhouette_scores = []\n",
+    "    \n",
+    "    for i in tqdm(range(n_samples), desc=\"Computing silhouette scores\"):\n",
+    "        # Get distances for the current sample\n",
+    "        same_cluster = labels == labels[i]\n",
+    "        other_clusters = ~same_cluster\n",
+    "        \n",
+    "        # a: Mean intra-cluster distance (avg distance to points in same cluster)\n",
+    "        a = np.mean(distance_matrix[i, same_cluster]) if np.sum(same_cluster) > 1 else 0\n",
+    "        \n",
+    "        # b: Mean nearest-cluster distance (smallest avg distance to another cluster)\n",
+    "        b = np.min([np.mean(distance_matrix[i, labels == other]) for other in unique_labels if other != labels[i]])\n",
+    "        \n",
+    "        # Silhouette score for sample i\n",
+    "        silhouette_scores.append((b - a) / max(a, b))\n",
+    "    \n",
+    "    return np.mean(silhouette_scores)\n",
+    "\n",
+    "# Compute silhouette scores with tqdm\n",
+    "silhouette_6_manual = manual_silhouette_score(score_data, clusters_6)\n",
+    "#silhouette_7_manual = manual_silhouette_score(score_data, clusters_7)\n",
+    "\n",
+    "print(f\"Manual Silhouette Score for 6 clusters: {silhouette_6_manual}\")\n",
+    "#print(f\"Manual Silhouette Score for 7 clusters: {silhouette_7_manual}\")\n"
    ]
   },
   {
